--- a/bit.html
+++ b/bit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -43,5 +43,4 @@
     </div>
 
 </body>
-
 </html>
