--- a/bit.html
+++ b/bit.html
@@ -5,42 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de gorjeta</title>
+    <link rel="stylesheet" href="bit.css">
 </head>
 
 <body>
-    <div>
-        <h1>Calculadora de gorjetas</h1>
-    </div>
-    <div>
-        <form>
-            <label form="bill">
-                <p>Quanto ficou a conta?</p>
-            </label>
-            <p>
-                R$ <input type="number" placeholder="100" name="bill" id="bill">
-            </p>
-            <label for="serviceQual">
-                <p>Como foi o seu serviço?</p>
-            </label>
-            <p>
-                <select name="serviceQual">
-                    <option disabled selected>-- Escolha uma opção</option>
-                    <option value="0.3">30% - Incrível </option>
-                    <option value="0.2">20% - Bom </option>
-                    <option value="0.15">15% - Aceitável </option>
-                    <option value="0.1">10% - Ruim</option>
-                    <option value="0.0">0% - Péssimo </option>
-                </select>
-            </p>
-            <label for="people">
-                <p>Quantas pessoas vão dividir a conta?</p>
-            </label>
-            <p>
-                <input type="number" placeholder="1" name="people"> pessoa(s)
-            </p>
-            <button type="submit">Calcular!</button>
-        </form>
+    <div id="container">
+        <div>
+            <h1>Calculadora de gorjetas</h1>
+        </div>
+        <div>
+            <form>
+                <label form="bill">
+                    <p>Quanto ficou a conta?</p>
+                </label>
+                <p>
+                    R$ <input type="number" placeholder="100" name="bill" id="bill">
+                </p>
+                <label for="serviceQual">
+                    <p>Como foi o seu serviço?</p>
+                </label>
+                <p>
+                    <select name="serviceQual">
+                        <option disabled selected>-- Escolha uma opção</option>
+                        <option value="0.3">30% - Incrível </option>
+                        <option value="0.2">20% - Bom </option>
+                        <option value="0.15">15% - Aceitável </option>
+                        <option value="0.1">10% - Ruim</option>
+                        <option value="0.0">0% - Péssimo </option>
+                    </select>
+                </p>
+                <label for="people">
+                    <p>Quantas pessoas vão dividir a conta?</p>
+                </label>
+                <p>
+                    <input type="number" placeholder="1" name="people"> pessoa(s)
+                </p>
+                <button type="submit">Calcular!</button>
+            </form>
+        </div>
     </div>
 
 </body>
+
 </html>
