--- a/bit.html
+++ b/bit.html
@@ -11,21 +11,21 @@
 <body>
     <div id="container">
         <div>
-            <h1>Calculadora de gorjetas</h1>
+            <h1 class="title">Calculadora de gorjetas</h1>
         </div>
         <div>
-            <form>
+            <form class="tipsform">
                 <label form="bill">
                     <p>Quanto ficou a conta?</p>
                 </label>
                 <p>
-                    R$ <input type="number" placeholder="100" name="bill" id="bill">
+                    R$ <input type="number" placeholder="100" name="bill" id="bill" class="formimput">
                 </p>
                 <label for="serviceQual">
                     <p>Como foi o seu serviço?</p>
                 </label>
                 <p>
-                    <select name="serviceQual">
+                    <select name="serviceQual" id="serviceQual" class="formimput">
                         <option disabled selected>-- Escolha uma opção</option>
                         <option value="0.3">30% - Incrível </option>
                         <option value="0.2">20% - Bom </option>
@@ -38,7 +38,7 @@
                     <p>Quantas pessoas vão dividir a conta?</p>
                 </label>
                 <p>
-                    <input type="number" placeholder="1" name="people"> pessoa(s)
+                    <input type="number" placeholder="1" name="people" id="people" class="formimput"> pessoa(s)
                 </p>
                 <button type="submit">Calcular!</button>
             </form>
