--- a/bit.html
+++ b/bit.html
@@ -25,7 +25,7 @@
                     <p>Como foi o seu serviço?</p>
                 </label>
                 <p>
-                    <select name="serviceQual" id="serviceQual" class="formimput">
+                    <select name="serviceQual" id="serviceQual" class="formSelect">
                         <option disabled selected>-- Escolha uma opção</option>
                         <option value="0.3">30% - Incrível </option>
                         <option value="0.2">20% - Bom </option>
@@ -40,7 +40,7 @@
                 <p>
                     <input type="number" placeholder="1" name="people" id="people" class="formimput"> pessoa(s)
                 </p>
-                <button type="submit">Calcular!</button>
+                <button type="submit" class="formSubmit">Calcular!</button>
             </form>
         </div>
     </div>
